--- a/src/main/webapp/pages/setor/detail.xhtml
+++ b/src/main/webapp/pages/setor/detail.xhtml
@@ -4,8 +4,8 @@
   xmlns:ui="http://java.sun.com/jsf/facelets">
 
   <f:metadata>
-    <f:viewParam name="id" value="#{protocoloCtrl.id}" />
-    <f:viewAction action="#{protocoloCtrl.onLoadForDetail}" />
+    <f:viewParam name="id" value="#{setorProtocoloCtrl.id}" />
+    <f:viewAction action="#{setorProtocoloCtrl.onLoadForDetail}" />
   </f:metadata>
 
   <ui:include src="edit.xhtml"/>
