--- a/src/main/webapp/resources/vah/editForm.xhtml
+++ b/src/main/webapp/resources/vah/editForm.xhtml
@@ -16,6 +16,7 @@
     <p:focus context="grid"/>
     <h:panelGrid id="grid"
                  columns="#{cc.attrs.columns == null ? 6 : cc.attrs.columns}"
+                 style="margin: 10px 0"
                  cellpadding="5">
       <composite:insertChildren/>
     </h:panelGrid>
