--- a/src/main/webapp/resources/vah/toolTip.xhtml
+++ b/src/main/webapp/resources/vah/toolTip.xhtml
@@ -13,7 +13,7 @@
 
 <composite:implementation>
   <h:panelGroup id="#{cc.attrs.id}" rendered="#{empty cc.attrs.rendered ? true : cc.attrs.rendered}">
-    <div id="mdl#{cc.attrs.id}#{cc.attrs.index}" for="#{cc.attrs.for}" class="mdl-tooltip guia-tooltip">
+    <div id="mdl#{cc.attrs.id}#{cc.attrs.index}" for="#{cc.attrs.for}" class="mdl-tooltip vah-tooltip">
       <h:outputText value="#{cc.attrs.value}"/>
     </div>
     <script>
