--- a/src/main/webapp/pages/protocolo/edit.xhtml
+++ b/src/main/webapp/pages/protocolo/edit.xhtml
@@ -9,8 +9,8 @@
 
   <ui:define name="metadata">
     <f:metadata>
-      <f:viewParam name="id" value="#{protocoloController.id}"/>
-      <f:viewAction action="#{protocoloController.onLoad}"/>
+      <f:viewParam name="id" value="#{protocoloCtrl.id}"/>
+      <f:viewAction action="#{protocoloCtrl.onLoad}"/>
     </f:metadata>
   </ui:define>
 
@@ -18,29 +18,29 @@
 
     <h:form id="form">
 
-      <p:panel header="#{protocoloController.editTitle}">
+      <p:panel header="#{protocoloCtrl.editTitle}">
         <h:panelGroup id="protocoloPnlWrapper" layout="block" style="position: relative">
 
-          <h:panelGroup layout="block" rendered="#{protocoloController.item.estado == 'RASCUNHO'}"
+          <h:panelGroup layout="block" rendered="#{protocoloCtrl.item.estado == 'RASCUNHO'}"
                         styleClass="protocolo-title protocolo-title--rascunho">
             <h:outputText value="RASCUNHO"/>
           </h:panelGroup>
-          <h:panelGroup layout="block" rendered="#{protocoloController.item.estado == 'ENVIADO'}"
+          <h:panelGroup layout="block" rendered="#{protocoloCtrl.item.estado == 'ENVIADO'}"
                         styleClass="protocolo-title protocolo-title--enviado">
             <h:outputText value="ENVIADO"/>
           </h:panelGroup>
 
           <p:focus context="protocoloPnlWrapper"/>
 
-          <h:panelGrid id="grid01" columns="3">
+          <h:panelGrid id="grid01" columns="3" style="margin: 10px 0;">
 
-            <uivah:autoComplete id="atendimento" value="#{protocoloController.item.atendimento}" label="Atendimento"
+            <uivah:autoComplete id="atendimento" value="#{protocoloCtrl.item.atendimento}" label="Atendimento"
                                 controller="#{atendimentoController}" completeMethod="completeAtendimento"
-                                editing="#{protocoloController.editing and protocoloController.item.id == null}"
+                                editing="#{protocoloCtrl.editing and protocoloCtrl.item.id == null}"
                                 converter="#{atendimentoConverter}" itemLabel="labelForSelectItem"
                                 styleClass="client-input"
                                 placeholder="Número/Nome paciente">
-              <p:ajax event="itemSelect" listener="#{protocoloController.recuperarDadosRascunho}"
+              <p:ajax event="itemSelect" listener="#{protocoloCtrl.recuperarDadosRascunho}"
                       process="@this" update="@form"
                       oncomplete="nextFocus('#{p:component('carregarDocsBtn')}')"/>
               <p:column width="75">
@@ -54,58 +54,52 @@
 
           <h:panelGrid columns="6">
 
-            <uivah:autoComplete id="setorOrigem" value="#{protocoloController.item.origem}" label="Origem"
-                                controller="#{setorController}" completeMethod="completeMethod"
-                                editing="#{protocoloController.editing and protocoloController.item.estado == 'RASCUNHO'}"
-                                rendered="#{not empty protocoloController.item.atendimento}"
-                                converter="#{setorConverter}" itemLabel="labelForSelectItem"
+            <uivah:autoComplete id="setorOrigem" value="#{protocoloCtrl.item.origem}" label="Origem"
+                                controller="#{setorProtocoloCtrl}" completeMethod="completeMethod"
+                                editing="#{protocoloCtrl.editing and protocoloCtrl.item.estado == 'RASCUNHO' and empty sessionController.setor}"
+                                rendered="#{not empty protocoloCtrl.item.atendimento}"
+                                converter="#{setorProtocoloConverter}" itemLabel="labelForSelectItem"
                                 placeholder="Origem...">
               <p:ajax event="itemSelect" process="@this" update="panelBtns"/>
-              <p:column width="75">
-                #{item.id}
-              </p:column>
               <p:column>
                 #{item.title}
               </p:column>
             </uivah:autoComplete>
-            <uivah:autoComplete id="setorDestino" value="#{protocoloController.item.destino}" label="Destino"
-                                controller="#{setorController}" completeMethod="completeMethod"
-                                editing="#{protocoloController.editing and protocoloController.item.estado == 'RASCUNHO'}"
-                                rendered="#{not empty protocoloController.item.atendimento}"
-                                converter="#{setorConverter}" itemLabel="labelForSelectItem"
+            <uivah:autoComplete id="setorDestino" value="#{protocoloCtrl.item.destino}" label="Destino"
+                                controller="#{setorProtocoloCtrl}" completeMethod="completeMethod"
+                                editing="#{protocoloCtrl.editing and protocoloCtrl.item.estado == 'RASCUNHO'}"
+                                rendered="#{not empty protocoloCtrl.item.atendimento}"
+                                converter="#{setorProtocoloConverter}" itemLabel="labelForSelectItem"
                                 placeholder="Origem...">
               <p:ajax event="itemSelect" process="@this" update="panelBtns"/>
-              <p:column width="75">
-                #{item.id}
-              </p:column>
               <p:column>
                 #{item.title}
               </p:column>
             </uivah:autoComplete>
           </h:panelGrid>
           <h:panelGroup id="dadosProtocoloPnl" layout="block" styleClass="margin-top">
-            <p:fieldset legend="Incluir documentos" rendered="#{not empty protocoloController.item.atendimento and protocoloController.item.estado == 'RASCUNHO'}">
+            <p:fieldset legend="Incluir documentos" rendered="#{not empty protocoloCtrl.item.atendimento and protocoloCtrl.item.estado == 'RASCUNHO'}">
               <h:panelGrid id="grid02" columns="6">
                 <uivah:inputDate id="inicioDate" label="Início"
-                                 value="#{protocoloController.inicioDate}"
-                                 editing="#{protocoloController.editing}"
+                                 value="#{protocoloCtrl.inicioDate}"
+                                 editing="#{protocoloCtrl.editing}"
                                  pattern="dd/MM/yyyy"/>
                 <uivah:inputDate id="terminoDate" label="Término"
-                                 value="#{protocoloController.terminoDate}"
-                                 editing="#{protocoloController.editing}"
+                                 value="#{protocoloCtrl.terminoDate}"
+                                 editing="#{protocoloCtrl.editing}"
                                  pattern="dd/MM/yyyy"/>
               </h:panelGrid>
               <h:panelGroup layout="block" style="display: inline-block">
                 <p:commandButton id="carregarDocsBtn" value="Buscar" ajax="true"
                                  process="@this grid02" update="tabPnl" validateClient="true"
-                                 styleClass="margin-top" action="#{protocoloController.buscarDocumentosNaoSelecionados}"
-                                 rendered="#{protocoloController.editing}"/>
+                                 styleClass="margin-top" action="#{protocoloCtrl.buscarDocumentosNaoSelecionados}"
+                                 rendered="#{protocoloCtrl.editing}"/>
               </h:panelGroup>
               <!-- DOCUMENTOS NÃO SELECIONADOS -->
               <h:panelGroup id="tabPnl" layout="block">
-                <p:tabView id="tabView01" value="#{protocoloController.documentosNaoSelecionados.list}"
+                <p:tabView id="tabView01" value="#{protocoloCtrl.documentosNaoSelecionados.list}"
                            var="docEntry" styleClass="margin-top"
-                           widgetVar="tabView01" rendered="#{not empty protocoloController.documentosNaoSelecionados}">
+                           widgetVar="tabView01" rendered="#{not empty protocoloCtrl.documentosNaoSelecionados}">
                   <p:tab id="dayTab" title="#{docEntry.key}">
                     <p:dataTable id="docTable" value="#{docEntry.value}"
                                  var="doc"
@@ -150,15 +144,15 @@
 
             <!-- DOCUMENTOS SELECIONADOS -->
             <p:fieldset legend="Documentos incluídos"
-                        rendered="#{not empty protocoloController.documentosSelecionados and not empty protocoloController.item.atendimento}"
+                        rendered="#{not empty protocoloCtrl.documentosSelecionados and not empty protocoloCtrl.item.atendimento}"
                         styleClass="margin-top">
-              <h:panelGroup rendered="#{empty protocoloController.documentosSelecionados.list}">
+              <h:panelGroup rendered="#{empty protocoloCtrl.documentosSelecionados.list}">
                 <h:outputText value="Sem documentos selecionados"/>
               </h:panelGroup>
               <h:panelGroup id="docSelecionadosPnl">
-                <p:tabView id="tabView02" value="#{protocoloController.documentosSelecionados.list}" var="docEntry"
+                <p:tabView id="tabView02" value="#{protocoloCtrl.documentosSelecionados.list}" var="docEntry"
                            styleClass="margin-top" widgetVar="tabView02"
-                           rendered="#{not empty protocoloController.documentosSelecionados.list}">
+                           rendered="#{not empty protocoloCtrl.documentosSelecionados.list}">
                   <p:tab title="#{docEntry.key}">
                     <p:dataTable id="docSelecionadosTable" value="#{docEntry.value}" var="doc"
                                  emptyMessage="Sem documentos selecionados"
@@ -166,10 +160,10 @@
                       <p:column headerText="Cód." width="50" styleClass="left-align">
                         <h:outputText value="#{doc.codigo}"/>
                       </p:column>
-                      <p:column headerText="Descrição" styleClass="left-align ellipsis-text" width="150">
+                      <p:column headerText="Descrição" styleClass="left-align ellipsis-text" width="200">
                         <h:outputText value="#{doc.descricao}"/>
                       </p:column>
-                      <p:column headerText="Prestador" styleClass="left-align ellipsis-text" width="250">
+                      <p:column headerText="Prestador" styleClass="left-align ellipsis-text" width="200">
                         <h:outputText id="prest" value="#{doc.prestador}"/>
                         <vah:toolTip id="prestTooltip" for="#{p:component('prest')}" value="#{doc.prestador}"
                                      index="#{idx}"/>
@@ -190,8 +184,8 @@
                       <p:column headerText="Tipo" styleClass="left-align" width="200">
                         <h:outputText value="#{doc.tipo.label}"/>
                       </p:column>
-                      <p:column width="30" style="text-align: center;" rendered="#{protocoloController.item.estado == 'RASCUNHO'}">
-                        <p:commandButton icon="fa fa-trash" action="#{protocoloController.removeDoc(doc)}" process="@this"
+                      <p:column width="30" style="text-align: center;" rendered="#{protocoloCtrl.item.estado == 'RASCUNHO'}">
+                        <p:commandButton icon="fa fa-trash" action="#{protocoloCtrl.removeDoc(doc)}" process="@this"
                                          update="#{p:component('docSelecionadosPnl')} #{p:component('sumarioPnl')}"/>
                       </p:column>
                     </p:dataTable>
@@ -200,25 +194,25 @@
               </h:panelGroup>
             </p:fieldset>
 
-            <h:panelGroup id="sumarioPnl" rendered="#{not empty protocoloController.item.atendimento}">
-              <p:fieldset legend="Sumário" styleClass="margin-top" rendered="#{protocoloController.showSumario}">
+            <h:panelGroup id="sumarioPnl" rendered="#{not empty protocoloCtrl.item.atendimento}">
+              <p:fieldset legend="Sumário" styleClass="margin-top" rendered="#{protocoloCtrl.showSumario}">
                 <h:panelGrid columns="4" style="padding: 5px;">
                   <h:outputLabel value="Total documentos:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalDocumentos}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalDocumentos}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:panelGroup/>
                   <h:panelGroup/>
                   <h:outputLabel value="Prescrições:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalPrescricoes}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalPrescricoes}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:outputLabel value="Evoluções:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalEvolucoes}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalEvolucoes}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:outputLabel value="Folhas Anestésicas:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalFolha}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalFolha}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:outputLabel value="Descrições Cirúrgicas:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalDescricoes}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalDescricoes}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:outputLabel value="Registros:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalRegistros}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalRegistros}" style="font-size: 18px; padding: 0 20px;"/>
                   <h:outputLabel value="Documentos manuais:" styleClass="lance-label"/>
-                  <h:outputText value="#{protocoloController.totalDocumentosManuais}" style="font-size: 18px; padding: 0 20px;"/>
+                  <h:outputText value="#{protocoloCtrl.totalDocumentosManuais}" style="font-size: 18px; padding: 0 20px;"/>
                 </h:panelGrid>
               </p:fieldset>
             </h:panelGroup>
@@ -229,18 +223,18 @@
         <h:panelGroup id="panelBtns" layout="block"
                       style="margin-top: 10px;">
           <p:commandButton id="enviarBtn" value="Enviar Documentos" icon="fa fa-send" ajax="true"
-                           action="#{protocoloController.enviarProtocolo}" process="@this" update="@form"
-                           disabled="#{empty protocoloController.documentosSelecionados.list or empty protocoloController.item.origem or empty protocoloController.item.destino}"
-                           rendered="#{protocoloController.editing and not empty protocoloController.item.atendimento and protocoloController.item.estado == 'RASCUNHO'}"/>
+                           action="#{protocoloCtrl.enviarProtocolo}" process="@this" update="@form"
+                           disabled="#{empty protocoloCtrl.documentosSelecionados.list or empty protocoloCtrl.item.origem or empty protocoloCtrl.item.destino}"
+                           rendered="#{protocoloCtrl.editing and not empty protocoloCtrl.item.atendimento and protocoloCtrl.item.estado == 'RASCUNHO'}"/>
           <p:commandButton id="saveBtn" value="Salvar Rascunho" icon="fa fa-floppy-o" ajax="true"
                            process="@form" update="@form" validateClient="true"
                            styleClass="margin-left"
-                           action="#{protocoloController.salvarParcial}"
-                           rendered="#{protocoloController.editing and not empty protocoloController.item.atendimento and protocoloController.item.estado == 'RASCUNHO'}"/>
+                           action="#{protocoloCtrl.salvarParcial}"
+                           rendered="#{protocoloCtrl.editing and not empty protocoloCtrl.item.atendimento and protocoloCtrl.item.estado == 'RASCUNHO'}"/>
           <p:commandButton id="backBtn" value="Voltar" ajax="false" immediate="true"
                            icon="fa fa-undo" styleClass="margin-left"
                            onstart="PF('changePage').show()"
-                           action="#{protocoloController.back}"/>
+                           action="#{protocoloCtrl.back}"/>
         </h:panelGroup>
       </p:panel>
     </h:form>
